[project]
name = "langfuse-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "langfuse>=4.0.0",
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
    "tenacity>=9.1.4",
]
